# CoAct

./: EXAMPLE_DOT_ENV  README.md  crew.py  docker-compose.yml  game.py  main.py  pyproject.toml  requirements.txt  test_deepeval.py
CoAct-ready/config/: agents.yaml  tasks.yaml
CoAct-ready/docs/: _config.yml
CoAct-ready/docs/references/: README.md
CoAct-ready/rag_service/: Dockerfile  app.py
CoAct-ready/serve/: app.py
CoAct-ready/src/: main.py
CoAct-ready/src/tools/: web_rag_tool.py
config/: agents.yaml  embedders.yaml  evaluation_rules.txt  llm_providers.yaml  tasks.yaml
data/0_external/: README.md
data/0_raw/: README.md
data/1_interim/: README.md
data/2_final/: README.md
docs/: CoAct_Dokumentacja.docx  index.md
docs/data_dictionaries/: README.md
docs/references/: README.md
notebooks/: README.md
output/features/: README.md
output/models/: README.md
output/reports/: README.md
output/reports/figures/: README.md
pipelines/: README.md
pipelines/coact/: etl.py
rag_service/: app.py  requirements.txt
serve/: README.md
src/: cli.py  config_loader.py  crew.py  embedder_provider.py  evaluation.py  llm_provider.py  main.py  test_deepeval.py
src/crew/: __init__.py  developers_crew.py  evaluation_crew.py
src/crew/config/: agents.yaml  embedders.yaml  llm_providers.yaml  tasks.yaml
src/tools/: web_rag_tool.py
